fixed some tests